--- a/group_vars/vyos.yml
+++ b/group_vars/vyos.yml
@@ -1,3 +1,6 @@
 ansbile_network_cli_ssh_type: libssh
 ansible_connection: network_cli
 ansible_network_os: vyos
+
+vyos__wan_centurylink_username: "vyos"
+vyos__wan_centurylink_password: "vyos"
